# dynamic_loading

./: CMakeLists.txt  README.md
src/: header.h  liba.cpp  libb.cpp  main.cpp
